k8s/apps/cilium-hubble-oauth2-proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-oauth2-proxy
  namespace: cilium-system
spec:
  hostnames:
    - hubble.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: hubble-ui
          port: 80
          weight: 1
