k8s/apps/cilium-hubble-oauth2-proxy/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-oauth2-proxy
  namespace: cilium-system
spec:
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          jwt:
            claims:
              - name: my:zitadel:grants
                valueType: StringArray
                values:
                  - 385243484187001257:hubble-user
            provider: zitadel
  jwt:
    providers:
      - issuer: https://auth.walnuts.dev
        name: zitadel
        remoteJWKS:
          uri: https://auth.walnuts.dev/oauth/v2/keys
  oidc:
    clientIDRef:
      name: hubble-oauth2-proxy-secret-288f7a
    clientSecret:
      name: hubble-oauth2-proxy-secret-288f7a
    forwardAccessToken: true
    logoutPath: /oauth2/logout
    provider:
      issuer: https://auth.walnuts.dev
    scopes:
      - openid
      - email
      - profile
      - offline_access
      - urn:zitadel:iam:org:projects:roles
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-oauth2-proxy
