k8s/apps/cilium-hubble-oauth2-proxy/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-oauth2-proxy-ingress
  namespace: cilium-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 8081
          protocol: TCP
  podSelector:
    matchLabels:
      k8s-app: hubble-ui
  policyTypes:
    - Ingress
